tests/lean/t3.lean.expected.out
Type
Type
Type
Type
t3.lean:9:16: error: unknown universe 'v'
Type
t3.lean:14:16: error: unknown universe 'z'
t3.lean:16:2: error: invalid namespace declaration, a namespace cannot be declared inside a section
Type
Type
Type
t3.lean:26:10: error: invalid namespace declaration, atomic identifier expected
Type
Type
t3.lean:35:2: error: universe level alias 'u' shadows existing global universe level
t3.lean:37:16: error: unknown universe 'bla.u'
